--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -13,7 +13,7 @@
   }
 }
 
-.App-header {
+.App__header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -43,3 +43,26 @@
 .button:hover{
   cursor: pointer;
 }
+
+.player{
+  width: 312px;
+  height: 40px;
+  background: #F1F2F2;
+  border-radius: 6px;
+}
+
+.playButton{
+  width: 50px;
+  height: 50px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.play{
+  background-image: url('./images/play.svg');
+}
+
+.stop{
+  background-image: url('./images/pause.svg');
+}
+
